--- a/SecureProbe/pyproject.toml
+++ b/SecureProbe/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "jinja2>=3.1.0",
     "python-dotenv>=1.0.0",
     "pyjwt>=2.8.0",
+    "owl-browser>=2.0.0",
 ]
 
 [project.optional-dependencies]
