--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ StealthFormBot/__pycache__
 StealthFormBot/.env
 .env
 StealthFormBot/owl_browser_sdk/owl_browser/__pycache__
+autoqa-ai-testing/artifacts
